# LLMIntroduction

./: .gitignore  README.md
CompanySearch/: README.md  commands.txt  pyproject.toml
CompanySearch/.claude/: launch.json
CompanySearch/frontend/: index.html
CompanySearch/knowledge/: user_preference.txt
CompanySearch/results/cfp_energy_2026-05-28/: result.json
CompanySearch/results/núclea_2026-05-28/: result.json
CompanySearch/src/company_search/: api.py  crew.py  main.py  models.py
CompanySearch/src/company_search/config/: agents.yaml  tasks.yaml
ElasticSearch/PodmanCompose/: podman-compose.dev.yml
HRQA/: ask.py  hr_policy_long.txt  ingestion.py  readme.md
HRQA/hr_chroma_db/: chroma.sqlite3
HuggingFaceDatasets/: main.py  readme.md
HuggingFaceDatasets/output/: long_doc.txt  ref_summary.txt
Notes/MultIModalRAG/: MainNotes.md
Notes/RAGs/: MainNotes.md
SentimentAnalysis/: main.py  readme.md
TextSummarization/: long_doc.txt  main.py  readme.md  ref_summary.txt
TextSummarization/audit/: summaries_audit.jsonl
TextSummarization/output/: evaluation_scores.json  final_summary.md
company_search/: README.md
company_search/src/company_search/: crew.py
