[project]
name = "company_search"
version = "0.1.0"
description = "company-search using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
company_search = "company_search.main:run"
run_crew = "company_search.main:run"
train = "company_search.main:train"
replay = "company_search.main:replay"
test = "company_search.main:test"
run_with_trigger = "company_search.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
